--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 </body>
 
-<script src="http://goo.gl/1yIJUX"></script>
-<script src="toggle_dropdown.js"/>
+<script src="http://goo.gl/1yIJUX"></script> 	<!-- jquery from Google API-->
+<script src="toggle_dropdown.js"/>				<!-- dropdown toggle code -->
 
 
 </html>
