--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
 
 <body>
 
+<div class="dropdown">
+<span class="dropdown-toggle">
+Flipboard
+<i class="fa fa-caret-down"></i>
+</span>
+<ul class="dropdown-menu" style="display: none;">
+<li>
+<span>Get the App</span>
+</li>
+<li>
+<span>Magazines</span>
+</li>
+<li>
+<span>Web Tools</span>
+</li>
+<li>
+<span>Community</span>
+</li>
+<li>
+<span>Support</span>
+</li>
+</ul>
+</div>
+</div>
+
+
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 	<!-- jquery from Google API-->
+<script src="toggle_dropdown.js"/>															<!-- dropdown toggle code -->
+
 
 </body>
-
-<script src="http://goo.gl/1yIJUX"></script> 	<!-- jquery from Google API-->
-<script src="toggle_dropdown.js"/>				<!-- dropdown toggle code -->
-
 
 </html>
